tests/ui/lifetimes/raw/multiple-prefixes.stderr
error: expected type, found `#`
  --> $DIR/multiple-prefixes.rs:3:17
   |
LL | fn test(x: &'r#r#r ()) {}
   |                 ^ expected type

error: aborting due to 1 previous error

