tests/ui/lifetimes/raw/multiple-prefixes.rs
//@ edition: 2021

fn test(x: &'r#r#r ()) {}
//~^ ERROR expected type, found `#`

fn main() {}
